# sfatfs

./: CMakeLists.txt  README.md
core/include/: sfatfs_bpb.h  sfatfs_port.h  sfatfs_types.h
core/src/: metadata.c
docs/: k.md
port/linux/: block_file.c  debug.c  memory.c  time.c
